config/standard/manifest.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "podcast-university-deployment"
  namespace: "default"
  labels:
    app: "podcast-university-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "podcast-university-deployment"
  template:
    metadata:
      labels:
        app: "podcast-university-deployment"
        tier: web
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: "nvidia-tesla-t4"
      containers:
      - name: "podcast-university-app"
        image: "us-east1-docker.pkg.dev/podcast-university/podcast-university-repo/podcast-university-app:v2.1gpu"
        resources:
          requests:
            cpu: 1
            memory: 4Gi
            ephemeral-storage: 2Gi
            nvidia.com/gpu: 1
          limits:
            cpu: 1
            memory: 4Gi
            ephemeral-storage: 2Gi
            nvidia.com/gpu: 1
